@@ -1,6 +1,5 @@
 FROM frolvlad/alpine-oraclejdk8:slim
-VOLUME /tmp
 ADD /target/highloadcup.jar highloadcup.jar
 RUN sh -c 'touch /highloadcup.jar'
-ENV JAVA_OPTS=""
-ENTRYPOINT [ "sh", "-c", "java -XX:+UseG1GC -Xmx4g -Xms4g -jar /highloadcup.jar" ]
+ENV JAVA_OPTS="-Xmx4g -Xms4g -server -XX:+AggressiveOpts"
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar /highloadcup.jar" ]
